--- a/OpinionClassifier.ipynb
+++ b/OpinionClassifier.ipynb
@@ -27,7 +27,7 @@
         "EFY7TXo--EaY",
         "NOWoytCh_Q5C"
       ],
-      "authorship_tag": "ABX9TyPx5jRIm4pFyVCsN03pxtNC",
+      "authorship_tag": "ABX9TyOkhGjC2x06UPX2QmKZDFJz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "id": "BIGYAwEf_5PH"
       },
       "source": [
-        "#**Using ML and DL algorithms to identify if a statement an Opinion.**\n",
+        "#**Using ML and DL algorithms to identify if a statement is an Opinion.**\n",
         "\n",
         "---\n",
         "8th May 2021\n",
