--- a/OpinionClassifier.ipynb
+++ b/OpinionClassifier.ipynb
@@ -27,7 +27,7 @@
         "EFY7TXo--EaY",
         "NOWoytCh_Q5C"
       ],
-      "authorship_tag": "ABX9TyOkhGjC2x06UPX2QmKZDFJz",
+      "authorship_tag": "ABX9TyOxntUyfnAXJOFrW5EoKX/k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2765,7 +2765,7 @@
         "\n",
         "- We used very simple architectures for both deep learning models. Making the networks deeper might help the model identify finer details, further improving its accuracy.\n",
         "\n",
-        "- The dictionary size for TF-IDF was limited to 500, and the neural networks at 1000. Increasing the vocabulary size, or using optimised models like Word2Vec might help improve performance.\n",
+        "- The dictionary size for TF-IDF and the Neural Networks was limited to 500. Increasing the vocabulary size, or using optimised models like Word2Vec might help improve performance.\n",
         "\n",
         "- The input text is limited to only under 150 characters. Most sentences and paragraphs are much longer than that. Hence, using deep learning models like Transformers might offer better results."
       ]
