--- a/notebook/OpinionClassifier.ipynb
+++ b/notebook/OpinionClassifier.ipynb
@@ -27,7 +27,7 @@
         "EFY7TXo--EaY",
         "NOWoytCh_Q5C"
       ],
-      "authorship_tag": "ABX9TyOxntUyfnAXJOFrW5EoKX/k",
+      "authorship_tag": "ABX9TyNdApjpaGr6IHNJwHeoEUdO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Naimish240/OpinionClassifier/blob/main/OpinionClassifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Naimish240/OpinionClassifier/blob/main/notebook/OpinionClassifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -55,7 +55,7 @@
         "id": "BIGYAwEf_5PH"
       },
       "source": [
-        "#**Using ML and DL algorithms to identify if a statement is an Opinion.**\n",
+        "#**Using ML and DL algorithms to identify if a statement an Opinion.**\n",
         "\n",
         "---\n",
         "8th May 2021\n",
@@ -133,7 +133,7 @@
         "\n",
         "Apart from this, I have also made use of Shapley Additive explanations (SHAP) to interpret the results of the various models.\n",
         "\n",
-        "Following the results of this notebook, I have also made a [website]() hosting the model. Users can give a statement as input, and the model will return its prediction for the sentence, along with an image explaining why it made its decision, through Shapley analysis.\n",
+        "Following the results of this notebook, I have also made a [website](https://naimish240.github.io/OpinionClassifier/) hosting the model. Users can give a statement as input, and the model will return its prediction for the sentence, along with an image explaining why it made its decision, through Shapley analysis.\n",
         "\n",
         "---"
       ]
@@ -1331,7 +1331,7 @@
       },
       "source": [
         "## Inference\n",
-        "From this, we can see that this model has a good accuracy of 84.7%, and an AUC of 0.93."
+        "From this, we can see that this model has a good accuracy of 85.2%, and an AUC of 0.93."
       ]
     },
     {
@@ -2747,7 +2747,7 @@
         "\n",
         "From the above tests, it is evident that the best performing models are the Naive Bayes classifier and LSTM, with equal accuracies of 86.6%.\n",
         "\n",
-        "But Logistic Regression and Support Vector Classifier also come in close, with accuracies of 85.8% and 86.2% respectively.\n",
+        "But Logistic Regression and SVC also come in close, with accuracies of 85.8% and 86.2% respectively.\n",
         "\n",
         "**Since the Logistic Regression classifier is both easier to train and not too computationally heavy, we shall be using it for our website.**"
       ]
@@ -2765,7 +2765,7 @@
         "\n",
         "- We used very simple architectures for both deep learning models. Making the networks deeper might help the model identify finer details, further improving its accuracy.\n",
         "\n",
-        "- The dictionary size for TF-IDF and the Neural Networks was limited to 500. Increasing the vocabulary size, or using optimised models like Word2Vec might help improve performance.\n",
+        "- The dictionary size for TF-IDF and Neural Network was limited to 500. Increasing the vocabulary size, or using optimised models like Word2Vec might help improve performance.\n",
         "\n",
         "- The input text is limited to only under 150 characters. Most sentences and paragraphs are much longer than that. Hence, using deep learning models like Transformers might offer better results."
       ]
